--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 alt="Loading">
                         </div>
                         <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">Chief Business Officer (CBO)<br>Since Sep 2022</p>
+                            <p class="testimonial-card-subtitle">Chief Operating Officer (COO)<br>Since Sep 2022</p>
                             <h6 class="testimonial-card-title">ABC Corp</h6>
                         </div>
                     </div>
