--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
                 <div class="col-md-4">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
+                            <img src="assets/imgs/cg.png" class="testimonial-card-img"
+                                alt="Loading">
+                        </div>
+                        <div class="testimonial-card-body">
+                            <p class="testimonial-card-subtitle">Assistant Manager - HR<br>Since Oct 2023</p>
+                            <h6 class="testimonial-card-title">Chaudhary Group</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="testimonial-card">
+                        <div class="testimonial-card-img-holder">
                             <img src="assets/imgs/ABC Logo.jpg" class="testimonial-card-img"
                                 alt="Loading">
                         </div>
