--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 
             <!-- row -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
-                            <img src="assets/imgs/cg.png" class="testimonial-card-img"
+                            <img src="assets/imgs/CG.png" class="testimonial-card-img"
                                 alt="Loading">
                         </div>
                         <div class="testimonial-card-body">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
                             <img src="assets/imgs/ABC Logo.jpg" class="testimonial-card-img"
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
                             <img src="assets/imgs/GG.png" class="testimonial-card-img"
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
                             <img src="assets/imgs/MJ.jpg" class="testimonial-card-img"
