--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 alt="Loading">
                         </div>
                         <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">Assistant Manager - HR<br>Since Oct 2023</p>
+                            <p class="testimonial-card-subtitle">Employee Experience Lead<br>Since Oct 2023</p>
                             <h6 class="testimonial-card-title">Chaudhary Group</h6>
                         </div>
                     </div>
