--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 alt="Loading">
                         </div>
                         <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">Employee Experience Lead<br>Since Oct 2023</p>
+                            <p class="testimonial-card-subtitle">Human Resources Manager (Global COE)<br>Since Oct 2023</p>
                             <h6 class="testimonial-card-title">Chaudhary Group</h6>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                                 alt="Loading">
                         </div>
                         <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">AM-Strategic Control | HRBP<br>From Jan 2020 to Sep 2022</p>
+                            <p class="testimonial-card-subtitle">DM-Strategic Control | HRBP<br>From Jan 2020 to Sep 2022</p>
                             <h6 class="testimonial-card-title">Golyan Group</h6>
                         </div>
                     </div>
